llvm/test/MC/AArch64/SME/streaming-mode-fprcvt.s
// NOTE: Assertions have been autogenerated by utils/update_mc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: aarch64-registered-target
// RUN: llvm-mc -triple=aarch64 -show-encoding -mattr=+sme,+neon,+fprcvt < %s \
// RUN:   | FileCheck %s --check-prefixes=CHECK-ENCODING
// RUN: llvm-mc -triple=aarch64 -show-encoding -mattr=+sme,+neon,+fprcvt < %s \
// RUN:   | sed '/.text/d' | sed 's/.*encoding: //g' \
// RUN:   | llvm-mc -triple=aarch64 -mattr=+sme,+neon,+fprcvt -disassemble -show-encoding \
// RUN:   | FileCheck %s --check-prefixes=CHECK-ENCODING

scvtf   d0, x0
// CHECK-ENCODING: scvtf	d0, x0                          // encoding: [0x00,0x00,0x62,0x9e]
// CHECK-ERROR:    error: instruction requires: neon

ucvtf   d1, x1
// CHECK-ENCODING: ucvtf	d1, x1                          // encoding: [0x21,0x00,0x63,0x9e]
// CHECK-ERROR:    error: instruction requires: neon

scvtf   s2, w2
// CHECK-ENCODING: scvtf	s2, w2                          // encoding: [0x42,0x00,0x22,0x1e]
// CHECK-ERROR:    error: instruction requires: neon

ucvtf   s3, w3
// CHECK-ENCODING: ucvtf	s3, w3                          // encoding: [0x63,0x00,0x23,0x1e]
// CHECK-ERROR:    error: instruction requires: neon
